--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -31,7 +31,8 @@
 <center><h1><u>Chapter 1 - Course Introduction, Quenya Crash Course</u></h1></center>
 
 <ul>
-<li><b><a href="#c1-1">1.1 History of Quenya</a></b></li>
+<li><b><a href="#c1-1">1.1 Course Introduction</a></b>
+<ul><li><b><a href="#c1-1-1">1.1.1 History of Quenya</a></b></li></ul></li>
 <li><b><a href="#c1-2">1.2 A Quenya Crash Course</a></b>
 <ul>
 <li><b><a href="#c1-2-1">1.2.1 Nouns (n.)</a></b></li>
@@ -60,7 +61,22 @@
 </ul></li>
 </ul>
 
-<h1><a id="c1-1"></a>1.1 History of Quenya</h1>
+<h1><a id="c1-1"></a>1.1 Course Introduction</h1>
+
+<p>This course will teach you about the Quenya Elvish language created by J.R.R. Tolkien, the “Elf Latin” of the Uttermost West which the Noldor brought to Middle-earth in the First Age. This course is “introductory” in the sense that it has no prerequisites. You can work your way through this course with no prior knowledge of any Elvish language. It is not “introductory” in the sense that it is easy. This course can take months to complete. It aims to teach Quenya as if it were an actual foreign language, with all the complexity that entails.</p>
+
+<p>It also introduces the student to the basics of Quenya scholarship, so the student understands not only the language itself but also how the language is derived from Tolkien’s own writings. The simple fact is that Tolkien never finished his account of the Elvish languages. The source material is very complex and in some places incomplete. Some amount of guesswork is required in order organize Quenya into a form usable for communication between people. This course highlights the areas where our knowledge of Quenya is less certain, and explains the choices it makes in defining Quenya where Tolkien’s own descriptions are unclear or contradictory.</p>
+
+<div class="advanced-topic">
+<p>If you are not ready for the time commitment required by this course and want just a quick overview of what Quenya is like, I recommend you look at the simpler and short “basic grammar” entry in the Eldamo lexicon:</p>
+
+<ul>
+<li><a href="https://eldamo.org/content/words/word-2572221327.html">https://eldamo.org/content/words/word-2572221327.html</a></li>
+</ul>
+
+</div>
+
+<h2><a id="c1-1-1"></a>1.1.1 History of Quenya</h2>
 
 <p>Quenya is the language of the High Elves, the Noldor, who travelled to Middle-earth from Valinor to fight the great enemy Morgoth. The tale of the Noldor is long and tragic, and by the end of the Third Age, few remained in Middle-earth. Their language survived, but mainly as a language of lore and ritual, fulfilling a role similar to Latin in Medieval Europe. Indeed, Tolkien himself often referred to Quenya as “Elf Latin”. For daily speech among the Elves, Quenya was largely replaced by its sister-language Sindarin.</p>
 
@@ -608,7 +624,7 @@
 </ul>
 
 <ul>
-<li>Note ³: You might wonder why this phrase has <i>menel</i> and not <i>i menel</i>. That’s because Quenya does not use <i>i</i> “the” before nouns that are obviously unique, like the sky, sun, moon, etc. The special ways that Quenya uses the definite article <i>i</i> will be discussed in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</li>
+<li>Note ³: You might wonder why this phrase has <i>menel</i> and not <i>i menel</i>. That’s because Quenya does not use <i>i</i> “the” before nouns that are obviously unique, like the sky, sun, moon, etc. The special ways that Quenya uses the definite article <i>i</i> will be discussed in <a href="eldamo-intro-quenya-06.html#c6-4">Chapter 6, Section §6.4</a>.</li>
 </ul>
 
 <p><a id="c1-2-5-1"></a><b><u>1.2.5.1 Noun Cases:</u></b> Quenya has another way of expressing the role of a noun in a sentence: the noun cases. Modern English doesn’t really have noun cases (the closest it comes is the possessive suffix: ’s), but many other languages do. Quenya has seven major noun cases, each with a specific suffix.</p>
@@ -714,7 +730,7 @@
 <li><i>Naucor nu i ambor.</i></li>
 <li><i>I eleni silir menelessë.</i></li>
 <li><i>I hesto atanion ú macilo.</i></li>
-<li><i>I aran sí menë i ostoryanna.</i></li>
+<li><i>I aran sí menë ostoryanna.</i></li>
 </ol>
 
 <p>Translate the following into Quenya:</p>
@@ -760,7 +776,7 @@
 <li>Note ¹: The indeclinable relative pronoun <i>i</i> “who, which, that” has the same form but is distinct in function from the definite article <i>i</i> “the”. Likewise for the plural <i>i-</i> of the declinable personal relative pronoun. See the discussion below.</li>
 </ul>
 
-<p>This section is the most difficult part of this first chapter, and in it we can only scratch the surface for how complex sentences are assembled. However, you need some understanding of complex sentence structure to have anything resembling normal discourse. These topics will be covered in greater detail in <a href="eldamo-intro-quenya-10.html">Chapter 10</a> and <a href="eldamo-intro-quenya-11.html">Chapter 11</a>.</p>
+<p>This section is the most difficult part of this first chapter, and in it we can only scratch the surface for how complex sentences are assembled. However, you need some understanding of complex sentence structure to have anything resembling normal discourse. These topics will be covered in greater detail in <a href="eldamo-intro-quenya-10.html#c10-1">Chapter 10, Section §10.1</a>.</p>
 
 <p><a id="c1-2-6-1"></a><b><u>1.2.6.1 Conjunctions:</u></b> As noted above, conjunctions join together elements of a sentence. Some examples of conjunction use:</p>
 
@@ -814,7 +830,7 @@
 <li><i>tíranye i orcor <u>illon</u> i atan norë</i> “I am watching the orcs <u>from whom (pl.)</u> the man runs”.</li>
 </ul>
 
-<p>Here the original nouns are plural: <i>taure-sse-n</i> “forest-in-(pl.)” and <i>orco-r</i> “orc-(pl.)”. Thus the declined relative pronouns must also use plural noun cases: <i>ya-nna-r</i> “which-to-(pl.)” and <i>i-llo-n</i> “(who pl.)-from-(pl.)”. This seems to contradict the notion from the previous section that <i>i</i> “who, which, that” is indeclinable, but strictly speaking, <i>i-</i> in <i>illon</i> is <u>not</u> the indeclinable relative pronoun, but rather is the plural form of declinable <i>ye</i> “who”. Yes, this can be confusing, but we will discuss it again in more detail in <a href="eldamo-intro-quenya-10.html">Chapter 10</a>.</p>
+<p>Here the original nouns are plural: <i>taure-sse-n</i> “forest-in-(pl.)” and <i>orco-r</i> “orc-(pl.)”. Thus the declined relative pronouns must also use plural noun cases: <i>ya-nna-r</i> “which-to-(pl.)” and <i>i-llo-n</i> “(who pl.)-from-(pl.)”. This seems to contradict the notion from the previous section that <i>i</i> “who, which, that” is indeclinable, but strictly speaking, <i>i-</i> in <i>illon</i> is <u>not</u> the indeclinable relative pronoun, but rather is the plural form of declinable <i>ye</i> “who”. Yes, this can be confusing, but we will discuss it again in more detail in <a href="eldamo-intro-quenya-10.html#c10-1">Chapter 10, Section §10.1</a>.</p>
 
 <p><a id="c1-2-6-4"></a><b><u>1.2.6.4 Distribution of Meaning Among Words:</u></b> The examples in this section illustrate an important fact about Quenya: the distribution of meaning among words in Quenya are not necessarily the same as in English. You cannot assume that a given Quenya word can be used in all the same ways as its English translation. For example, English has two relative pronouns which can be used for persons: “who” and “that”. Quenya likewise has indeclinable <i>i</i> and declinable <i>ye</i>, but used in different circumstances.</p>
 
@@ -959,11 +975,11 @@ Star (is shining) hour-to meeting-our-of
 
 <p>This illustrates some differences between Quenya and English. The English simple present (“shines”) and present continuous (“is shining”) both refer to the present time, and the Quenya present tense (<i>síla</i>) may be translated with either of these in English, whichever sounds more natural. The reverse is not true, however: the English present continuous tense “is shining” may only be translated with the Quenya present tense <i>síla</i>, since it implies an ongoing action which requires the Quenya present. We will discuss this further when we revisit the present tense in <a href="eldamo-intro-quenya-02.html#c2-2-3">Chapter 2, Section §2.2.3</a>.</p>
 
-<p>Tolkien’s English translation also includes the indefinite article “a” as in “a star”, but you may be surprised to see “the hour” rather than “an hour”. That’s because Quenya doesn’t use its definite article <i>i</i> the same way as English uses “the”. We have already seen one example of this, in the word <i>menel</i> “the sky”. English typically uses “the” with unique things like “the sky, the Sun, the Moon”, but Quenya does not, and so has <i>menel</i> but not **<i>i menel</i>. Likewise, omitting “the” in the phrase “on the hour of our meeting” sounds awkward in English, but Quenya omits <i>i</i> in this circumstance. If you rearranged the phrase a bit and said “on our meeting’s hour”, English <u>would</u> omit “the”. In general, Quenya uses its definite article <i>i</i> less often than English uses “the”. We will discuss the topic of the definite article in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</p>
+<p>Tolkien’s English translation also includes the indefinite article “a” as in “a star”, but you may be surprised to see “the hour” rather than “an hour”. That’s because Quenya doesn’t use its definite article <i>i</i> the same way as English uses “the”. We have already seen one example of this, in the word <i>menel</i> “the sky”. English typically uses “the” with unique things like “the sky, the Sun, the Moon”, but Quenya does not, and so has <i>menel</i> but not **<i>i menel</i>. Likewise, omitting “the” in the phrase “on the hour of our meeting” sounds awkward in English, but Quenya omits <i>i</i> in this circumstance. If you rearranged the phrase a bit and said “on our meeting’s hour”, English <u>would</u> omit “the”. In general, Quenya uses its definite article <i>i</i> less often than English uses “the”. We will discuss the topic of the definite article in <a href="eldamo-intro-quenya-06.html#c6-4">Chapter 6, Section §6.4</a>.</p>
 
-<p>Another curious thing is how Tolkien’s translation says “on the hour” rather than “to the hour”, as might be expected with the allative noun case <i>-nna</i>, usually translated “to” or “toward” in English. But recall that <i>-nna</i> really means “movement in the direction of”, and the intended meaning can depend on context. Here the shining star is above the meeting in question, and its light is shining on it from above. Hence “on the hour” sounds more natural in English. The directional noun cases and their possible meanings will be revisited in <a href="eldamo-intro-quenya-07.html">Chapter 7</a>.</p>
+<p>Another curious thing is how Tolkien’s translation says “on the hour” rather than “to the hour”, as might be expected with the allative noun case <i>-nna</i>, usually translated “to” or “toward” in English. But recall that <i>-nna</i> really means “movement in the direction of”, and the intended meaning can depend on context. Here the shining star is above the meeting in question, and its light is shining on it from above. Hence “on the hour” sounds more natural in English. The directional noun cases and their possible meanings will be revisited in <a href="eldamo-intro-quenya-07.html#c7-3">Chapter 7, Section §7.3</a>.</p>
 
-<p>As for the Elvish phrase itself, what Tolkien actually wrote in <i>The Lord of the Rings</i> was <i>Elen síla lúmenn’ omentielvo</i>, with <i>lúmenn’</i> rather than <i>lúmenna</i>. This is because when a Quenya word ends in a weaker vowel and the following word begins with a vowel, the final vowel of the first word is sometimes (but not always) dropped in speech through a process called elision. The dropped vowel is generally retained in spelling, except perhaps in written poetry where dropping the vowel may be useful for achieving a particular poetic meter (and also in prose representations of speech like in Frodo’s greeting). This and other changes to vowels as pronounced in speech are examined in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</p>
+<p>As for the Elvish phrase itself, what Tolkien actually wrote in <i>The Lord of the Rings</i> was <i>Elen síla lúmenn’ omentielvo</i>, with <i>lúmenn’</i> rather than <i>lúmenna</i>. This is because when a Quenya word ends in a weaker vowel and the following word begins with a vowel, the final vowel of the first word is sometimes (but not always) dropped in speech through a process called elision. The dropped vowel is generally retained in spelling, except perhaps in written poetry where dropping the vowel may be useful for achieving a particular poetic meter (and also in prose representations of speech like in Frodo’s greeting). This and other changes to vowels as pronounced in speech are examined in <a href="eldamo-intro-quenya-06.html#c6-1">Chapter 6, Section §6.1</a>.</p>
 
 <div class="advanced-topic">
 <p><b>Advanced Topic:</b> One final thing of note is that there is another variation of the phrase in the first edition of <i>The Lord of the Rings</i>, where it was <i>elen síla lúmenn’ omentielmo</i>, with <i>omentie<u>lmo</u></i> rather than <i>omentie<u>lvo</u></i>. The reason for this difference is not a linguistic one: when Tolkien wrote the first edition of LotR, he imagined the possessive suffix “our” was <i>-lma</i>. In between the first and second edition, he changed his mind and decided it should be <i>-lva</i> instead. This demonstrates an important issue in the study of the Elvish languages: they were not fixed in Tolkien’s mind, and he made various adjustments to the grammar and other features of the languages over the six or so decades that he worked on them over his lifetime. These conceptual changes to the languages will be discussed as an advanced topic in <a href="eldamo-intro-quenya-02.html#c2-7">Chapter 2, Section §2.7</a>.</p>
@@ -1365,7 +1381,7 @@ Star (is shining) hour-to meeting-our-of
 <ol class="exercise-list">
 <li>The man and the dwarf have swords.</li>
 <li>Swords that cut orcs shine blue[ly].</li>
-<li>He/she has a sword from which orcs flee.</li>
+<li>He/she has a sword from which orcs run.</li>
 <li>I am watching the captain of orcs to whom the orcs go. ¹</li>
 </ol>
 
@@ -1375,7 +1391,7 @@ Star (is shining) hour-to meeting-our-of
 
 <ol class="exercise-list" start="5">
 <li><i>Eldar lorir i</i> (“the”) <i>tauressë i</i> (“that”) <i> orcor cirir.</i></li>
-<li><i>Atani tuvir i taure yassë i eldar lorir.</i></li>
+<li><i>Atani tuvir i taurë yassë i eldar lorir.</i></li>
 <li><i>Eldar nórar i orcollon i círar i taurë.</i></li>
 <li><i>Atani ar naucor ménar i taurenna yallo i eldar norir.</i></li>
 </ol>
@@ -1384,7 +1400,7 @@ Star (is shining) hour-to meeting-our-of
 
 <ol class="exercise-list tengwar-block" start="5">
 <li><span class="transcribe" data-lang="q" data-value="Eldar lorir i tauressë i orcor cirir">Eldar lorir i tauressë i orcor cirir</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Atani tuvir i taure yassë i eldar lorir">Atani tuvir i taure yassë i eldar lorir</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Atani tuvir i taurë yassë i eldar lorir">Atani tuvir i taurë yassë i eldar lorir</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Eldar nórar i orcollon i círar i taurë">Eldar nórar i orcollon i círar i taurë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Atani ar naucor ménar i taurenna yallo i eldar norir">Atani ar naucor ménar i taurenna yallo i eldar norir</span></li>
 </ol>
