--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
@@ -735,8 +735,8 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <ul class="vocab-list">
 <li><b>appa-</b> <i>v.</i> “to touch”
 <ul><li><i>pa.t.</i> *<b>appanë</b> “touched”</li></ul></li>
-<li><b>cen-</b> <i>v.</i> “to see”
-<ul><li><i>pa.t.</i> <b>cennë</b> “saw”</li></ul></li>
+<li><b>cen-</b> <i>v.</i> “to see, look”
+<ul><li><i>pa.t.</i> <b>cennë</b> “saw, looked”</li></ul></li>
 <li>#<b>hlar-</b> <i>v.</i> “to hear”
 <ul><li><i>pa.t.</i> ^<b>hlassë</b> “heard”</li></ul></li>
 <li><b>hlón</b> (<b>hlon-</b>) <i>n.</i> “noise”</li>
@@ -809,7 +809,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <li>Do your ears listen to the king’s words?</li>
 <li>The pair of birds sang in the tree.</li>
 <li>His tongue tasted a bitter vegetable.</li>
-<li>Birds fly over land and sea.</li>
+<li>Birds fly above both land and sea.</li>
 <li>The halfling ate a sweet apple beside the pair of trees.</li>
 <li>I smell a stinking orc.</li>
 </ol>
@@ -856,7 +856,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <tr><td>consonantal: <i>atar</i></td><td><i>ataren</i></td><td>*<i>atarun</i></td><td>*<i>atallin</i></td><td>*<i>atarin</i></td></tr>
 </table></center>
 
-<p>Declensions marked with a “*” are unattested and thus somewhat speculative. Recall that for nouns whose stems differ from their uninflected form, suffixes are added to the stem. Thus for <i>nís</i> (<i>niss-</i>) “woman”, its dative singular form is <i>nissen</i> “to/for a woman”. Note that we haven’t fully described the partitive plural yet. It will be discussed in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>, and there are some complications with the partitive plural that we are skipping over for now.</p>
+<p>Declensions marked with a “*” are unattested and thus somewhat speculative. Recall that for nouns whose stems differ from their uninflected form, suffixes are added to the stem. Thus for <i>nís</i> (<i>niss-</i>) “woman”, its dative singular form is <i>nissen</i> “to/for a woman”. Note that we haven’t fully described the partitive plural yet. It will be discussed in <a href="eldamo-intro-quenya-06.html#c6-2">Chapter 6, Section §6.2</a>, and there are some complications with the partitive plural that we are skipping over for now.</p>
 
 <p><a id="c5-3-1-2"></a><b>5.3.1.2 Using the Dative:</b> The three basic elements of many Quenya (and English) sentences are the subject, verb, and direct object. In Quenya these are generally (like English) indicated by word order: <i>elda anta macil</i> “an elf gives a sword”, <i>atan nyarë lairë</i> “a man recites a poem”. But a sentence may also have a second object, called the indirect object, representing the recipient, beneficiary or purpose of the action. This indirect object in English is often marked with the preposition “to” or “for”, and in Quenya it is marked with the dative noun case:</p>
 
@@ -888,8 +888,8 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <p>Here are some vocabulary words having to do with plants:</p>
 
 <ul class="vocab-list">
-<li><b>ala-</b> <i>v.</i> “to grow (plants); to thrive” ¹
-<ul><li><i>pa.t.</i> <b>alanë</b> “grew, thrived”</li></ul></li>
+<li><b>ala-</b> <i>v.</i> “to flourish, grow (plants)” ¹
+<ul><li><i>pa.t.</i> <b>alanë</b> “flourished, grew”</li></ul></li>
 <li><b>alda</b> <i>n.</i> “tree” ²</li>
 <li><b>erdë</b> <i>n.</i> “seed”</li>
 <li><b>lassë</b> <i>n.</i> “leaf”</li>
@@ -910,7 +910,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 </ul>
 
 <ul>
-<li>Note ¹: The verb <i>ala-</i> only means “grow” with respect to plants. It can be used intransitively of plants themselves growing: <i>i alda alanë</i> “the tree grew”. It can also be used transitively for people growing plants: <i>i elda alanë lóti</i> “the elf grew flowers”. When used intransitively of people, it means “thrive”: <i>i elda alanë</i> “the elf thrived”.</li>
+<li>Note ¹: The verb <i>ala-</i> only means “grow” with respect to plants. It can be used intransitively of plants themselves growing: <i>i alda alanë</i> “the tree grew”. It can also be used transitively for people growing plants: <i>i elda alanë lóti</i> “the elf grew flowers”. When used intransitively of people, it means “flourished”: <i>i elda alanë</i> “the elf flourished”.</li>
 <li>Note ²: The words <i>alda</i> and <i>ornë</i> both refer to trees, but <i>ornë</i> is for tall straight trees like pines, and <i>alda</i> is for broad trees like oaks or as a generic word for all trees.</li>
 </ul>
 
@@ -926,7 +926,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <tr><td>consonantal: <i>atar</i></td><td><i>ataren</i></td><td>*<i>atarun</i></td><td>*<i>atallin</i></td><td>*<i>atarin</i></td></tr>
 </table></center>
 
-<p><b>Partitive Plural Summary (Refresher):</b> The partitive plural is formed by adding <i>-li</i> to a noun, and means “some”, as in <i>eldali</i> “some Elves”. The partitive plural will be discussed in more detail in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</p>
+<p><b>Partitive Plural Summary (Refresher):</b> The partitive plural is formed by adding <i>-li</i> to a noun, and means “some”, as in <i>eldali</i> “some Elves”. The partitive plural will be discussed in more detail in <a href="eldamo-intro-quenya-06.html#c6-2">Chapter 6, Section §6.2</a>.</p>
 
 <h2><a id="x5-3"></a>Exercise 5.3</h2>
 
@@ -1008,7 +1008,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <p><a id="c5-4-1-3"></a><b>5.4.1.3 Weak and Reformed Perfects:</b> In one document Tolkien said that “the forms of past and perfect became progressively more closely associated in Quenya” (WJ/366), and there are a number of examples where the perfect is based on the past form rather than the verb stem. The most frequent example of this are what I call weak perfects, where augment and <i>-ië</i> are added to the weak past form of a derived verb: <i>henta-</i> “to read, scan” → <i>hentanë</i> “read, scanned” → <i>ehentanië</i> “has read, has scanned”.</p>
 
-<p>The same process can happen with verbs that have irregular pasts. The verb <i>auta-</i> “to depart” has an irregular strong past <i>vánë</i> “departed”, and its perfect <i>avánië</i> “has departed” is based on that past (WJ/366). Likewise <i>ista-</i> “to know” has the irregular past <i>sintë</i> “knew” and a perfect <i>isintië</i> “has known” based on it (PE17/77). We haven’t covered enough about verbs to explain when these weak or reformed perfects might be used, so we will defer a full discussion of these perfect variants to <a href="eldamo-intro-quenya-08.html">Chapter 8</a>. For now, just use the simple perfect and you will be right most of the time.</p>
+<p>The same process can happen with verbs that have irregular pasts. The verb <i>auta-</i> “to depart” has an irregular strong past <i>vánë</i> “departed”, and its perfect <i>avánië</i> “has departed” is based on that past (WJ/366). Likewise <i>ista-</i> “to know” has the irregular past <i>sintë</i> “knew” and a perfect <i>isintië</i> “has known” based on it (PE17/77). We haven’t covered enough about verbs to explain when these weak or reformed perfects might be used, so we will defer a full discussion of these perfect variants to <a href="eldamo-intro-quenya-08.html#c8-1">Chapter 8, Section §8.1</a>. For now, just use the simple perfect and you will be right most of the time.</p>
 
 <p>Note that the “association” of past and perfect can also go in the reverse direction, from perfect to past. In particular, there are a number of “long vowel pasts” whose forms are based on the perfect: <i>utúlië</i> “has come” → <i>túlë</i> “came”, <i>atyávië</i> “has tasted” → <i>tyávë</i> “tasted”, <i>esérië</i> “has rested” → <i>sérë</i> “rested”. These reformations of pasts to match the perfect are less predictable however (except in the case of basic verbs with <i>v</i> in their stem, where it occurs almost all the time).</p>
 
@@ -1176,7 +1176,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <p>The adverb <i>ú</i> “not” can be used as a general negator in circumstances where the negative verb <i>ui-</i> is inconvenient.</p>
 
 <div class="advanced-topic">
-<p><a id="c5-5-1-4"></a><b>5.5.1.4 How do we know this?</b> The basic <i>u</i>-negation system described above is based on a description of it written around 1959 (PE17/143-144), from a document where Tolkien rejected <i>la</i>-negation entirely in favor of <i>u</i>-negation. In this 1959 note, the negative verb was <i>ua-</i>, but in notes from 1967 and 1968 he used <i>ui-</i> for the negative verb instead (PE17/68; VT49/29), which is the form we use above. In one note from 1969 it seems he used <i>ú</i> by itself as the negative element (VT49/7-8) in the so-called Ambidexters Sentence, which we will look at in <a href="eldamo-intro-quenya-07.html">Chapter 7</a>.</p>
+<p><a id="c5-5-1-4"></a><b>5.5.1.4 How do we know this?</b> The basic <i>u</i>-negation system described above is based on a description of it written around 1959 (PE17/143-144), from a document where Tolkien rejected <i>la</i>-negation entirely in favor of <i>u</i>-negation. In this 1959 note, the negative verb was <i>ua-</i>, but in notes from 1967 and 1968 he used <i>ui-</i> for the negative verb instead (PE17/68; VT49/29), which is the form we use above. In one note from 1969 it seems he used <i>ú</i> by itself as the negative element (VT49/7-8) in the so-called Ambidexters Sentence, which we will look at in <a href="eldamo-intro-quenya-07.html#c7-5">Chapter 7, Section §7.5</a>.</p>
 
 <p>Note that the negative prefix <i>ú-</i> was still prevalent in periods where Tolkien favored <i>la</i>-negation, but in these periods largely (or evenly exclusively) had a “bad” connotation. In periods where Tolkien favored <i>u</i>-negation, the prefix was more neutral in meaning.</p>
 </div>
@@ -1406,9 +1406,9 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <li><i>I nauco ui halla</i></li>
 <li><i>Únen verya.</i></li>
 <li><i>I atani uir laituva i aran.</i></li>
-<li><i>Áva mene i ostonna síra.</i></li>
+<li><i>Áva menë i ostonna síra.</i></li>
 <li><i>Ván! Ván menuva i ostonna.</i></li>
-<li><i>Aran váquentë i voronda hesto auta.</i></li>
+<li><i>I aran váquentë i voronda hesto auta.</i></li>
 </ol>
 
 <p>Translate the following to Quenya:</p>
@@ -1479,7 +1479,7 @@ that maiden snowdrop-(adj.)
 what-(dative) the air-(pl.) give-(pl.) kiss-sweet
 </blockquote>
 
-<p>The heart of this stanza of the poem is its second line. The subject of the entire phrase is <i>Niëliccilis</i>, which is <i>Niéle</i> with the diminutive suffix <i>-iccë</i> (<i>-icci</i>) and the extra suffix <i>-lis</i>, apparently a reduction of <i>lissë</i> “sweet”; see <i>miquelis</i> below. The verb is <i>lendë</i> “went”, the past tense of <i>lelya-</i> “to travel, go”. The word <i>tanna</i> “thither” is the destination, so the second line means “sweet little Niéle went thither”. See <a href="eldamo-intro-quenya-06.html">Chapter 6</a> for the reason why <i>Niéle</i> shortens its vowel in <i>Nieliccilis</i> (hint: it’s because the following syllable became heavy).</p>
+<p>The heart of this stanza of the poem is its second line. The subject of the entire phrase is <i>Niëliccilis</i>, which is <i>Niéle</i> with the diminutive suffix <i>-iccë</i> (<i>-icci</i>) and the extra suffix <i>-lis</i>, apparently a reduction of <i>lissë</i> “sweet”; see <i>miquelis</i> below. The verb is <i>lendë</i> “went”, the past tense of <i>lelya-</i> “to travel, go”. The word <i>tanna</i> “thither” is the destination, so the second line means “sweet little Niéle went thither”. See <a href="eldamo-intro-quenya-06.html#c6-1-2-2">Chapter 6, Section §6.1.2.2</a> for the reason why <i>Niéle</i> shortens its vowel in <i>Nieliccilis</i> (hint: it’s because the following syllable became heavy).</p>
 
 <p>The first line of the poem is a pair of adjectives used adverbially: <i>noro-linda</i> and <i>piru-cendë-a</i>. The first is “run light[ly]” and the second its “two toes [dual] point” with an adjective suffix <i>-a</i>. It thus means something like “two toes pointed” or more loosely “on the point of two toes” (like a dancer). In vocabulary notes associated with the poem, Tolkien actually translated <i>pirucendëa</i> as “on the points of her toes”.</p>
 
@@ -1487,7 +1487,7 @@ what-(dative) the air-(pl.) give-(pl.) kiss-sweet
 
 <p>The fourth line begins with the relative pronoun <i>ya</i> in the dative case <i>ya-n</i>: “to which/whom”. It may refer back to <i>Niéle</i> (“to whom”). Alternately, since it uses the inanimate relative pronoun <i>ya</i> “which” rather than animate <i>ye</i> “who”, it may refer to the snowdrop.</p>
 
-<p>The remainder of the fourth line is the rest of the subordinate clause: <i>wilyar</i> “air-(pl.)” with corresponding plural verb <i>antar</i> “gives” and the direct object <i>miquë</i> “kiss”, again with what appears to be suffixed <i>lissë</i> “sweet”. Longer compounds like <i>miquelissë</i> often reduce their final syllable, in the vocabulary notes for the poem Tolkien gave <i>miquelis(s)-</i> “soft, sweet kiss”. This type of compound reduction will be discussed in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</p>
+<p>The remainder of the fourth line is the rest of the subordinate clause: <i>wilyar</i> “air-(pl.)” with corresponding plural verb <i>antar</i> “gives” and the direct object <i>miquë</i> “kiss”, again with what appears to be suffixed <i>lissë</i> “sweet”. Longer compounds like <i>miquelissë</i> often reduce their final syllable, in the vocabulary notes for the poem Tolkien gave <i>miquelis(s)-</i> “soft, sweet kiss”. This type of compound reduction will be discussed in <a href="eldamo-intro-quenya-06.html#c6-1-2-1">Chapter 6, Section §6.1.2.1</a>.</p>
 
 <p>As a final note, the words <i>wendë</i> “maiden” and <i>wilyar</i> “airs” both have an archaic initial <i>w</i> as opposed to their modern Quenya forms <i>vendë</i> or <i>vilyar</i>. Thus it seems Tolkien intended this poem to be archaic or poetic in style.</p>
 
@@ -1584,8 +1584,8 @@ to whom the air gives kisses.
 <ul class="vocab-list">
 <li><b>appa-</b> <i>v.</i> “to touch”
 <ul><li><i>pa.t.</i> *<b>appanë</b> “touched”</li></ul></li>
-<li><b>cen-</b> <i>v.</i> “to see”
-<ul><li><i>pa.t.</i> <b>cennë</b> “saw”</li></ul></li>
+<li><b>cen-</b> <i>v.</i> “to see, look”
+<ul><li><i>pa.t.</i> <b>cennë</b> “saw, looked”</li></ul></li>
 <li>#<b>hlar-</b> <i>v.</i> “to hear”
 <ul><li><i>pa.t.</i> ^<b>hlassë</b> “heard”</li></ul></li>
 <li><b>hlón</b> (<b>hlon-</b>) <i>n.</i> “noise”</li>
@@ -1613,8 +1613,8 @@ to whom the air gives kisses.
 <p><b><u>Plants:</u></b></p>
 
 <ul class="vocab-list">
-<li><b>ala-</b> <i>v.</i> “to grow (plants); to thrive” ¹
-<ul><li><i>pa.t.</i> <b>alanë</b> “grew, thrived”</li></ul></li>
+<li><b>ala-</b> <i>v.</i> “to flourish, grow (plants)” ¹
+<ul><li><i>pa.t.</i> <b>alanë</b> “flourished, grew”</li></ul></li>
 <li><b>alda</b> <i>n.</i> “tree” ²</li>
 <li><b>erdë</b> <i>n.</i> “seed”</li>
 <li><b>lassë</b> <i>n.</i> “leaf”</li>
@@ -1635,7 +1635,7 @@ to whom the air gives kisses.
 </ul>
 
 <ul>
-<li>Note ¹: The verb <i>ala-</i> only means “grow” with respect to plants. It can be used intransitively of plants themselves growing: <i>i alda alanë</i> “the tree grew”. It can also be used transitively for people growing plants: <i>i elda alanë lóti</i> “the elf grew flowers”. When used intransitively of people, it means “thrive”: <i>i elda alanë</i> “the elf thrived”.</li>
+<li>Note ¹: The verb <i>ala-</i> only means “grow” with respect to plants. It can be used intransitively of plants themselves growing: <i>i alda alanë</i> “the tree grew”. It can also be used transitively for people growing plants: <i>i elda alanë lóti</i> “the elf grew flowers”. When used intransitively of people, it means “flourished”: <i>i elda alanë</i> “the elf flourished”.</li>
 <li>Note ²: The words <i>alda</i> and <i>ornë</i> both refer to trees, but <i>ornë</i> is for tall straight trees like pines, and <i>alda</i> is for broad trees like oaks or as a generic word for all trees.</li>
 </ul>
 
@@ -2003,12 +2003,12 @@ to whom the air gives kisses.
 <p>English answers:</p>
 
 <ol class="exercise-list">
-<li>A tall man [male] came to the city gate (or the gate of the city) with his wagon.</li>
+<li>A tall man [male] came to the city’s gate (or the gate of the city) with his wagon.</li>
 <li>“Who is standing under the gate of iron” the captain said.</li>
-<li>“I am the grandson of the king and my name [is] Mico” the man [male] said.</li>
+<li>“I am [the] grandson of the king and my name [is] Mico” the man [male] said.</li>
 <li>“Call the king!” the captain said.</li>
 <li>The captain raised his/her¹ sword of silver.</li>
-<li>The king of the realm watched the men from his tower.</li>
+<li>[The] king of the realm watched the men from his tower.</li>
 </ol>
 
 <ul>
@@ -2018,22 +2018,26 @@ to whom the air gives kisses.
 <h2><a id="a5-2"></a>Answer Key 5.2</h2>
 
 <ol class="exercise-list">
-<li>My eyes are watching the two orcs.</li>
-<li>The dwarf’s beard [is] white and grey.</li>
-<li>His breath is leaving the man’s lips slow[ly].</li>
+<li>My (pair of) eyes are watching the two orcs.</li>
+<li>The dwarf’s beard [is] both white and grey.</li>
+<li>His/her breath is leaving the man’s [human’s] lips slow[ly].</li>
 <li>The pair of children have golden hair.</li>
-<li>The elf smelled the sweet breeze.</li>
+<li>The elf smelled the fragrant breeze.</li>
 <li>I hear a noise in the forest.</li>
 </ol>
 
 <ol class="exercise-list" start="7">
-<li><i>Ma hlarelyat lastat i arano quettar?</i></li>
+<li><i>Ma hlarelyat lastat i arano quettain?</i></li>
 <li><i>I aiwet lirnet i aldassë.</i></li>
 <li><i>Lambarya tyávë sára quëa.</i></li>
 <li><i>Aiwi vilir or nór yo ëar.</i></li>
-<li><i>I perian mantë lissë orva ar’ i aldu.</i></li>
+<li><i>I perian mantë lissë orva ar’ i aldu.</i> ¹</li>
 <li><i>Nustan saura orco.</i></li>
 </ol>
+
+<ul>
+<li>Note ¹: <i>alda</i> “tree” has dual <i>aldu</i> instead of **<i>aldat</i> to avoid repeated <i>d, t</i> sounds.</li>
+</ul>
 
 <p>Tengwar answers:</p>
 
@@ -2081,7 +2085,7 @@ to whom the air gives kisses.
 
 <ol class="exercise-list">
 <li>I have jumped into the river.</li>
-<li>The ship has floated in the harbor.</li>
+<li>The ship has floated in the harbour.</li>
 <li>The king has raised his sword.</li>
 <li>The river has flowed from the mountain.</li>
 <li>The dwarf has followed the man.</li>
