--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
@@ -203,7 +203,7 @@
 <li>The possessive suffix <i>-va</i> (English “’s”) → <i>culum<u>á</u>va</i> “orange’s”</li>
 <li>The genitive plural suffix <i>-ron</i> (English “of” with plural words) → <i>culum<u>á</u>ron</i> “of oranges”</li>
 <li>The partitive plural suffix <i>-li</i> (English “some”) → <i>culum<u>á</u>li</i> “some oranges”.</li>
-<li>The instrumental suffix <i>-nen</i> (English “with, by [means of]”) → <i>culum<u>á</u>nen</i> “by [means of] an orange”; the instrumental will be discussed in <a href="eldamo-intro-quenya-07.html">Chapter 7</a>.</li>
+<li>The instrumental suffix <i>-nen</i> (English “with, by [means of]”) → <i>culum<u>á</u>nen</i> “by [means of] an orange”; the instrumental will be discussed in <a href="eldamo-intro-quenya-07.html#c7-3-5">Chapter 7, Section §7.3.5</a>.</li>
 </ul>
 
 <p>Using the consonantal noun <i>Atanatar</i> “Father of Men” as an example, suffixes that are likely to trigger lengthening when added to longer nouns ending in a single consonant include:</p>
@@ -380,7 +380,7 @@
 
 <p><a id="c6-2-1-1"></a><b>6.2.1.1 Function of the Partitive Plural:</b> There are some interesting interactions in Quenya between the definite article <i>i</i> and the Quenya plural. A definite plural group (with <i>i</i> “the”) refers to a single (limited) group: <i>i eldar matir massa</i> “the elves eat bread” meaning a specific group of elves. Without an article the phrase becomes a general statement, referring to all of elvenkind: <i>eldar matir massa</i> “Elves eat bread”. In this context, the indefinite plural is also a total plural, referring to the entire class of Elves. The plural may still be qualified with other modifiers, as in <i>eldar Lóriendo matir massa</i> “Elves of Lórien eat bread”, but by default this phrase refers to all the elves of Lórien.</p>
 
-<p>Quenya has a different plural suffix <i>-li</i> used to refer to part of a class; this is called the partitive or partial plural (Tolkien used both terms). Its meaning is roughly equivalent to English “some, many”, so <i>eldali matir massa</i> means “some/many elves eat bread”, which is less than all elves. Like English “some”, it also doubles as a way of specifying an indefinite group. For example, <i>eldali túler i osto</i> means “some elves came to the city”, that is some indefinite group of elves. You couldn’t say <i>eldar túler i osto</i> for an indefinite group, because that would imply all of elvenkind came to the city.</p>
+<p>Quenya has a different plural suffix <i>-li</i> used to refer to part of a class; this is called the partitive or partial plural (Tolkien used both terms). Its meaning is roughly equivalent to English “some, many”, so <i>eldali matir massa</i> means “some/many elves eat bread”, which is less than all elves. Like English “some”, it also doubles as a way of specifying an indefinite group. For example, <i>eldali túler i ostonna</i> means “some elves came to the city”, that is some indefinite group of elves. You couldn’t say <i>eldar túler i ostonna</i> for an indefinite group, because that would imply all of elvenkind came to the city.</p>
 
 <p><span class="advanced-topic">Speculative:</span> Presumably once the indefinite group is mentioned, it would switch to the definite group plural for the rest of the discourse. For example: <i>Eldali túler i ostonna. I eldar merner quetë i aranen.</i> “Some elves (an unknown group) came to the city. The elves (the whole of the previously mentioned group) wanted to speak to the king”. The first instance uses the partitive plural <i>-li</i> for the indefinite group, and the second instance uses the normal plural <i>-r</i> and the definite article <i>i</i> for the now defined group.</p>
 
@@ -491,7 +491,7 @@
 <li><i>Aiweli viller vilyassë.</i></li>
 <li><i>Rácali fárëar lopoldi.</i></li>
 <li><i>Alquali lútar i ailinessë.</i></li>
-<li><i>Porocéli ontaner ohteli.</i></li>
+<li><i>Porocéli nostaner ohteli.</i></li>
 <li><i>Rauroli amátier mámali.</i></li>
 <li><i>Leucali serir salquessë.</i></li>
 </ol>
@@ -756,7 +756,7 @@
 <p>Translate the following from Quenya to English as vocabulary practice:</p>
 
 <ol class="exercise-list" start="11">
-<li><i>Tirnelvë i aran ep’ ambarónë.</i></li>
+<li><i>Cennelvë i aran ep’ ambarónë.</i></li>
 <li><i>I yára elda quéta i nessa atanen sí.</i></li>
 <li><i>Andúnë metta i aurëo (ná).</i></li>
 <li><i>Á pusta!</i></li>
@@ -831,7 +831,7 @@
 <p>English also uses “the” with a determining adjective like first, last, highest, etc, while Quenya does not:</p>
 
 <ul>
-<li>English “he/she was <u>the</u> last elf who arrived today”, Quenya <i>nánes telda elda i ananyë síra</i>.</li>
+<li>English “he/she was <u>the</u> last elf who came today”, Quenya <i>nánes telda elda i túlë síra</i>.</li>
 </ul>
 
 <p>Note that the <i>i</i> in the Quenya sentence above is not the definite article, but rather is the indeclinable relative pronoun <i>i</i> “who, which, that”.</p>
@@ -978,7 +978,7 @@
 <li><i>Túves cumna rotto.</i></li>
 <li><i>I elda eressëa rimbessë.</i></li>
 <li><i>Ui métima nótë.</i></li>
-<li><i>Ilyë atani ananyer síra.</i></li>
+<li><i>Ilyë atani túler síra.</i></li>
 <li><i>Samilvë fárëa massa.</i></li>
 <li><i>Á quanta i yulma, mecin.</i></li>
 </ol>
@@ -1232,7 +1232,7 @@
 </ul>
 
 <ul>
-<li>Note ¹: This word is a combination of <i>en-</i> “re-”, <i>yal-</i> “to call” and the noun suffix <i>-ië</i> “-ing” (discussed in <a href="eldamo-intro-quenya-07.html">Chapter 7</a>), so it more literally means “recalling”.</li>
+<li>Note ¹: This word is a combination of <i>en-</i> “re-”, <i>yal-</i> “to call” and the gerund suffix <i>-ië</i> “-ing” (discussed in <a href=eldamo-intro-quenya-07.html#c7-2-2">Chapter 7, §7.2.2</a>), so it more literally means “recalling”.</li>
 <li>Note ²: This word is a combination of <i>tenna</i> “until” and <i>oio</i> “ever”, so is a reference to “forever” from now leading into the future, as opposed to the more ordinary word <i>oialë</i> which is “forever” as an eternal state, something that was true in the past as well. Thus a better translation of <i>tennoio</i> would be “forevermore”.</li>
 <li>Note ³: This word is a combination of <i>ter</i> “through” and <i>mar-</i> “to live, abide”, hence more literally meaning “through-abide” = “endure, last”.</li>
 </ul>
@@ -1657,9 +1657,9 @@ and of the One who is above all thrones for ever.
 <ol class="exercise-list" start="11">
 <li><i>Ohta túlë i nórenna.</i></li>
 <li><i>I hesto tirnë i cottor i ambollo.</i></li>
-<li><i>Cánor orcoron costaner</i> (or <i>orquion</i>).</li>
-<li><i>I hesto ortanë ehtirya ar yalles i ohtari.</i></li>
-<li><i>I ohtari mahtaner i orcor macilínen</i> (or <i>orqui</i>)</li>
+<li><i>Cánor i orcoron costaner</i> (or <i>orquion</i>).</li>
+<li><i>I hesto ortanë ehtirya ar yallë i ohtari.</i></li>
+<li><i>I ohtari mahtaner i orcor macilínen</i> (or <i>orqui</i>).</li>
 <li><i>Varyanentë i hesto sandainen.</i></li>
 <li><i>I roqueni turuner i cottor ar rehtaner i eldar.</i></li>
 <li><i>I taurë nánë varna ar rainë entúlë.</i></li>
@@ -1670,8 +1670,8 @@ and of the One who is above all thrones for ever.
 <ol class="exercise-list tengwar-block" start="11">
 <li><span class="transcribe" data-lang="q" data-value="Ohta túlë i nórenna">Ohta túlë i nórenna</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I hesto tirnë i cottor i ambollo">I hesto tirnë i cottor i ambollo</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Cánor orcoron costaner">Cánor orcoron costaner</span>.</li>
-<li><span class="transcribe" data-lang="q" data-value="I hesto ortanë ehtirya ar yalles i ohtari">I hesto ortanë ehtirya ar yalles i ohtari</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Cánor i orcoron costaner">Cánor i orcoron costaner</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I hesto ortanë ehtirya ar yallë i ohtari">I hesto ortanë ehtirya ar yallë i ohtari</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I ohtari mahtaner i orcor macilínen">I ohtari mahtaner i orcor macilínen</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Varyanentë i hesto þandainen">Varyanentë i hesto þandainen</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I roqueni turuner i cottor ar rehtaner i eldar">I roqueni turuner i cottor ar rehtaner i eldar</span></li>
@@ -1691,7 +1691,7 @@ and of the One who is above all thrones for ever.
 
 <ol class="exercise-list" start="7">
 <li><i>Lamneli farar ar lamneli uir fara.</i></li>
-<li><i>Lingwili matir earuilë.</i></li>
+<li><i>Lingwili matir ëaruilë.</i></li>
 <li><i>Miuyeli roitëar nyarroli.</i></li>
 <li><i>Huoli tirner i yaxi.</i></li>
 <li><i>Roccoli onórier i sírinna.</i></li>
@@ -1702,7 +1702,7 @@ and of the One who is above all thrones for ever.
 
 <ol class="exercise-list tengwar-block" start="7">
 <li><span class="transcribe" data-lang="q" data-value="Lamneli farar ar lamneli uir fara">Lamneli farar ar lamneli uir fara</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Lingwili matir earuilë">Lingwili matir earuilë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Lingwili matir ëaruilë">Lingwili matir ëaruilë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Miuyeli roitëar nyarroli">Miuyeli roitëar nyarroli</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Huoli tirner i yaxi">Huoli tirner i yaxi</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Roccoli onórier i sírinna">Roccoli onórier i sírinna</span></li>
@@ -1744,7 +1744,7 @@ and of the One who is above all thrones for ever.
 </ol>
 
 <ol class="exercise-list" start="11">
-<li>We saw the king after dawn.</li>
+<li>We (and you) saw the king after dawn.</li>
 <li>The old elf is speaking to the young man now.</li>
 <li>Sunset (is) the end of the day.</li>
 <li>Stop!</li>
@@ -1755,7 +1755,7 @@ and of the One who is above all thrones for ever.
 <h2><a id="a6-4"></a>Answer Key 6.4</h2>
 
 <ol class="exercise-list">
-<li><i>Tirnen nís. I nís nánë halla.</i></li>
+<li><i>Cennen nís. I nís nánë halla.</i></li>
 <li><i>Altáriel Saila.</i></li>
 <li><i>Ranco orco.</i></li>
 <li><i>Á yalë i hesto.</i></li>
@@ -1768,7 +1768,7 @@ and of the One who is above all thrones for ever.
 <p>Tengwar answers:</p>
 
 <ol class="exercise-list tengwar-block">
-<li><span class="transcribe" data-lang="q" data-value="Tirnen nís. I nís nánë halla.">Tirnen nís. I nís nánë halla.</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Cennen nís. I nís nánë halla.">Cennen nís. I nís nánë halla.</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Altáriel Saila">Altáriel Saila</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Ranco orco">Ranco orco</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Á yalë i hesto">Á yalë i hesto</span></li>
@@ -1781,9 +1781,9 @@ and of the One who is above all thrones for ever.
 <ol class="exercise-list" start="9">
 <li>He/she found an empty cave.</li>
 <li>The elf [is] lonely in a crowd.</li>
-<li>There is not a last number.</li>
-<li>All [the] men arrived today.</li>
-<li>We have enough bread.</li>
+<li>It is not [the] last number.</li>
+<li>All [the] men came today.</li>
+<li>We (and you) have enough bread.</li>
 <li>Fill the cup, please.</li>
 </ol>
 
