--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
@@ -380,11 +380,11 @@
 
 <ol class="exercise-list">
 <li><i>I harma-antaila aran alya.</i></li>
-<li><i>Mancaima armar mirwë.</i></li>
+<li><i>Mancaimë armar mirwë.</i></li>
 <li><i>I telpë-samila nauco ui penya.</i></li>
 <li><i>Orcor merir tuvë lépima harma.</i></li>
 <li><i>I mapinë macili vanwë.</i></li>
-<li><i>I atani norner minna i lantaina ando.</i></li>
+<li><i>I ohtari norner minna i lantaina ando.</i></li>
 </ol>
 
 <p>Translate the following to Quenya:</p>
@@ -670,7 +670,7 @@
 <ol class="exercise-list">
 <li><i>I nís sernë linta i laupë.</i></li>
 <li><i>I periandi coller i corma andavë.</i></li>
-<li><i>I eldar autuvar Endórello rongo.</i></li>
+<li><i>I eldar autuvar Endorello rongo.</i></li>
 <li><i>I mai carina vacco nánë hirina i rottossë.</i></li>
 </ol>
 
@@ -1035,7 +1035,7 @@ and blessed [is] the fruit womb-your-of Jesus
 
 <p><b>Second phrase:</b> <i>I Héru aselyë.</i> The beginning of the phrase is simply <i>i Héru</i> “the Lord”, referring to God, with the capital letter and the long <i>é</i> making it a title. This long <i>é</i> appeared in all versions of the prayer, but as an ordinary word <i>heru</i> “lord” usually has a short <i>e</i>. The prepositional element <i>aselyë</i> is an example of a pronoun suffixed to a preposition, something Tolkien did at times. The preposition <i>as</i> “with” is not the one I would recommend; in <a href="eldamo-intro-quenya-03.html#c3-6-1">Chapter 3 Vocabulary</a> I gave <i>ó</i> “(together) with” for this purpose (which Tolkien himself used in earlier versions of the prayer). This phrase is a “to be” statement with an omitted <i>ná</i>, hence means “the Lord [is] with you”.</p>
 
-<p><b>Third phrase:</b> <i>Aistana elyë imíca nísi.</i> The word <i>aistana</i> “blessed” is another word I would recommend against using; it is (a) based on an earlier verb <i>aista-</i> “to bless” and (b) a pattern of passive participle formation using only the suffix <i>-na</i>, rather than the <i>-ina</i> recommended above in section <a href="#c9-1-2">9.1.2 Passive Participles</a>. Rather than <i>imíca</i>, I would use <i>imbi</i> for “among”, as recommended in <a href="eldamo-intro-quenya-07.html#c7-3-7">Chapter 7</a>. The plural form <i>nísi</i> “women” is also unusual; I would use <i>nissi</i> as recommended in <a href="eldamo-intro-quenya-02.html#c2-3-3">Chapter 2</a>. Despite the unusual vocabulary, the meaning is clear: “blessed [are] you among women”.</p>
+<p><b>Third phrase:</b> <i>Aistana elyë imíca nísi.</i> The word <i>aistana</i> “blessed” is another word I would recommend against using; it is (a) based on an earlier verb <i>aista-</i> “to bless” and (b) a pattern of passive participle formation using only the suffix <i>-na</i>, rather than the <i>-ina</i> recommended above in section <a href="#c9-1-2">9.1.2 Passive Participles</a>. Rather than <i>imíca</i>, I would use <i>imbi</i> for “among”, as recommended in <a href="eldamo-intro-quenya-07.html#c7-3-7">Chapter 7, Section §7.3.7</a>. The plural form <i>nísi</i> “women” is also unusual; I would use <i>nissi</i> as recommended in <a href="eldamo-intro-quenya-02.html#c2-3-3">Chapter 2, §2.3.3</a>. Despite the unusual vocabulary, the meaning is clear: “blessed [are] you among women”.</p>
 
 <p><b>Fourth phrase:</b> <i>Ar aistana i yávë mónalyo Yésus.</i> The beginning of the phrase is all familiar words: <i>ar aistana i yávë</i> “and blessed [is] the fruit” (see above for <i>aistana</i>). This is followed by the 2nd-sg. possessive form <i>mónalya</i> “your womb”, in the genitive so that the final <i>a</i> becomes <i>o</i>. The last word is simply a phonetic adaptation of <i>Jesus</i>, so the phrase means “and blessed [is] the fruit of your womb Jesus”.</p>
 
@@ -1357,15 +1357,15 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <li>The silver-having dwarf is not poor.</li>
 <li>Orcs want to find takeable treasure.</li>
 <li>The seized swords [are] lost.</li>
-<li>The men ran into the fallen gate.</li>
+<li>The warriors ran into the fallen gate.</li>
 
 </ol>
 
 <ol class="exercise-list" start="7">
 <li><i>I antaula perian penë telpë sí.</i></li>
-<li><i>Cavaitë mahar harë i coassë.</i></li>
+<li><i>I cavaitë mahar harë i cöassë.</i></li>
 <li><i>Ilyë mahtailë ohtari qualuvar.</i></li>
-<li><i>Cavinë annar rehtaner i nettion alassë.</i></li>
+<li><i>I cavinë annar rehtaner i nettion alassë.</i></li>
 <li><i>I eldar antaner i lepinë armar i heston.</i></li>
 <li><i>I lepilë atani hander i mindonessë.</i></li>
 </ol>
@@ -1384,16 +1384,16 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <h2><a id="a9-2"></a>Answer Key 9.2</h2>
 
 <ol class="exercise-list">
-<li>It snows.</li>
+<li>[It] snows.</li>
 <li>Made the knife = the knife was made.</li>
 <li>One hammers nails when one builds a house.</li>
-<li>Tools [are] made with a forge.</li>
+<li>Tools [are] shaped with a forge.</li>
 </ol>
 
 <ol class="exercise-list" start="5">
 <li><i>Ulë.</i></li>
 <li><i>Mo catë macil curwenen.</i></li>
-<li><i>I emma nánë tacina i rambanna taxenen.</i></li>
+<li><i>I emma nánë tacina i rambassë taxenen.</i></li>
 <li><i>Orë i tamon carita macil.</i> ¹</li>
 </ol>
 
@@ -1415,7 +1415,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <ol class="exercise-list">
 <li>The woman sewed swift[ly] the shirt.</li>
 <li>The halflings bore the ring long [for a long time].</li>
-<li>The elves will leave from Middle-earth soon.</li>
+<li>The elves will depart from Middle-earth soon.</li>
 <li>The well made jacket was found in the cave.</li>
 </ol>
 
@@ -1446,16 +1446,20 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 
 <ol class="exercise-list" start="5">
 <li><i>I nauco anfinwa.</i></li>
-<li><i>I atan finwa lá nauco.</i></li>
+<li><i>I atan finwa lá i nauco.</i></li>
 <li><i>I elda anfinwa quenion.</i></li>
-<li><i>I istar arfinwa ilyaron.</i></li>
+<li><i>I istar arfinwa ilyaron.</i> ¹</li>
 </ol>
+
+<ul>
+<li>Note ¹: The term <i>istar</i> “wizard” is reserved for the five wizards sent from Valinor to aid the people of Middle-earth. A more ordinary “wizard” among elves or men would be called a <i>sairon</i>; see <a href="eldamo-intro-quenya-11.html#c11-2-5">Chapter 11, §11.2.5</a>.</li>
+</ul>
 
 <p>Tengwar answers:</p>
 
 <ol class="exercise-list tengwar-block" start="5">
 <li><span class="transcribe" data-lang="q" data-value="I nauco anfinwa">I nauco anfinwa</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I atan finwa lá nauco">I atan finwa lá nauco</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I atan finwa lá i nauco">I atan finwa lá i nauco</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I elda anfinwa quenion">I elda anfinwa quenion</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I istar arfinwa ilyaron">I istar arfinwa ilyaron</span></li>
 </ol>
