--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-10.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-10.html
@@ -1094,7 +1094,7 @@ cemenessë tambë Erumanessë.</i>
 <h2><a id="a10-1"></a>Answer Key 10.1</h2>
 
 <ol class="exercise-list">
-<li>Where (is) the healing herb which the doctor used on [for] the dwarf?</li>
+<li>Where [is] the healing herb which the doctor used on [for] the dwarf?</li>
 <li>The men who came to the city are standing in the gate.</li>
 <li>The knife with which the captain wounded the elf was found under the tree.</li>
 <li>The doctor to whom you spoke yesterday will treat the dwarf.</li>
@@ -1147,37 +1147,37 @@ cemenessë tambë Erumanessë.</i>
 <li>I will clean myself.</li>
 <li>He/she found himself/herself in a forest.</li>
 <li>They dug a hole in the hill.</li>
-<li>A sword (is) like a long knife.</li>
+<li>A sword [is] like a long knife.</li>
 </ol>
 
 <ol class="exercise-list" start="5">
 <li><i>Á rehta intyë!</i></li>
 <li><i>Cestanexer manna i hesto mennë.</i> ¹</li>
 <li><i>I netti tarner rindessë.</i></li>
-<li><i>Ná i imya atan.</i> ²</li>
+<li><i>Ná imya atan.</i> ²</li>
 </ol>
 
 <ul>
 <li>Note ¹: This is an indirect question, which uses the question word <i>manna</i> “whither” rather than the relative pronoun expression <i>yanna</i>. See section <a href="eldamo-intro-quenya-08.html#c8-2-1">Chapter 8, Section §8.2.1</a>.</li>
-<li>Note ²: The “it” in the English phrase “it is the same noun” is just a placeholder subject. In Quenya this is handled with an impersonal expression without a subject: <i>ná imya atan</i> “[it] is the same man”.</li>
+<li>Note ²: The “it” in the English phrase “it is the same noun” is just a placeholder subject. In Quenya this is handled with an impersonal expression without a subject. Similarly, the definite article <i>i</i> is omitted in the Quenya phrase because the noun is already defined by the determining adjective <i>imya</i> “same”. Thus: <i>ná imya atan</i> “[it] is [the] same man”.</li>
 </ul>
 
 <p>Tengwar answers:</p>
 
 <ol class="exercise-list tengwar-block" start="5">
 <li><span class="transcribe" data-lang="q" data-value="Á rehta intyë!">Á rehta intyë!</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Cestanexer yanna i hesto mennë">Cestanexer yanna i hesto mennë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Cestanexer manna i hesto mennë">Cestanexer manna i hesto mennë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I netti tarner rindessë">I netti tarner rindessë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Ná i imya atan">Ná i imya atan</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Ná imya atan">Ná imya atan</span></li>
 </ol>
 
 <h2><a id="a10-4"></a>Answer Key 10.4</h2>
 
 <ol class="exercise-list">
-<li>He/she can [knows how to] speak Quenya.</li>
-<li>He/she can [is physically able to] fight.</li>
-<li>He/she may [is free to] speak to the king.</li>
-<li>He/she must [is compelled to] speak to the king.</li>
+<li>He/she can (knows how to) speak Quenya.</li>
+<li>He/she can (is physically able to) fight.</li>
+<li>He/she may (is free to) speak to the king.</li>
+<li>He/she must (is compelled to) speak to the king.</li>
 </ol>
 
 </body>
