--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-11.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-11.html
@@ -144,7 +144,7 @@
 <li>Future perfect <i>(a)mátiéva</i> “will have eaten” for actions that will be complete before some other future action.</li>
 </ul>
 
-<p>Note that there is no “past in the future” tense, because the future perfect fulfills this function: <i>yá anyuvalvë i ostossë, apátiévalvë ter auri neldë</i> “when we arrive at the city, we will have walked for [through] three days”. There is, however a (rare) past future perfect, used in hypothetical past statement much like English “would”:</p>
+<p>Note that there is no “past in the future” tense, because the future perfect fulfills this function: <i>yá anyuvalvë i osto, apátiévalvë ter auri neldë</i> “when we arrive at the city, we will have walked for [through] three days”. There is, however a (rare) past future perfect, used in hypothetical past statement much like English “would”:</p>
 
 <ul>
 <li>Past future perfect <i>(a)mátiévanë</i> “would have eaten” for past hypothetical actions.</li>
