--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
@@ -1026,7 +1026,11 @@
 <li>With universally unique things: <i>menel</i> vs. “[the] heavens”.</li>
 <li>With epithets following a name: <i>Elendil Voronda</i> vs. “Elendil [the] Faithful”.</li>
 <li>When the noun is defined by a determining adjective: <i>telda elda</i> vs. “[the] last elf”.</li>
-<li>When the referent is defined by a genitive or possessive: <i>má i atano</i> “[the] hand of the man”, <i>atanwa macil</i> “a man’s sword”.</li>
+<li>When the referent is defined by a genitive or possessive: <i>má atano</i> “[the] hand of a man”, <i>atanwa macil</i> “a man’s sword”.
+<ul>
+<li>Note that the article is omitted from the modified noun, but may still be applied to the modifying noun.</li>
+<li><i>má <u>i</u> atano</i> “[the] hand of <u>the</u> man”, <i><u>i</u> atanwa macil</i> “<u>the</u> man’s sword”</li>
+</ul></li>
 </ul>
 </li>
 </ul>
