--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
@@ -81,11 +81,12 @@
 <li><b>aistana</b> <i>adj.</i> “blessed”</li>
 <li><b>aiwë</b> <i>n.</i> “bird”</li>
 <li><b>aiya</b> <i>interj.</i> “hail”</li>
-<li><b>ala-</b> <i>v.</i> “to flourish, grow”<ul><li><i>pa.t.</i> †<b>aldë</b> “flourished, grew” (archaic)</li><li><i>pa.t.</i> <b>alanë</b> “grew, thrived”</li></ul></li>
+<li><b>ala-</b> <i>v.</i> “to flourish, grow”<ul><li><i>pa.t.</i> †<b>aldë</b> “flourished, grew” (archaic)</li><li><i>pa.t.</i> <b>alanë</b> “flourished, grew”</li></ul></li>
 <li><b>alasaila</b> <i>adj.</i> “unwise”</li>
 <li><b>alassë</b> <i>n.</i> “happiness”</li>
 <li>!<b>alassëa</b> <i>adj.</i> “happy”</li>
 <li><b>alcar</b> <i>n.</i> “glory”</li>
+<li><b>alcarin</b> <i>adj.</i> “glorious”</li>
 <li><b>alda</b> <i>n.</i> “tree”</li>
 <li><b>Aldúya</b> <i>n.</i> “Tuesday; Trees-day”</li>
 <li><b>alfírima</b> <i>adj.</i> “immortal”</li>
@@ -116,7 +117,7 @@
 <li><b>anna</b> <i>n.</i> “gift”</li>
 <li><b>anta-</b> <i>v.</i> “to give”<ul><li><i>pa.t.</i> <b>antanë</b> “gave”</li></ul></li>
 <li><b>anto</b> <i>n.</i> “mouth”</li>
-<li><b>anya-</b> <i>v.</i> “to arrive”<ul><li><i>pa.t.</i> *<b>ananyë</b> “arrived”</li></ul></li>
+<li><b>anya-</b> <i>v.</i> “to reach, arrive at”<ul><li><i>pa.t.</i> *<b>ananyë</b> “reached, arrived at”</li></ul></li>
 <li><b>appa-</b> <i>v.</i> “to touch”<ul><li><i>pa.t.</i> *<b>appanë</b> “touched”</li></ul></li>
 <li><b>apsa</b> <i>n.</i> “meat (cooked)”</li>
 <li><b>apta-</b> <i>v.</i> “to refuse”<ul><li><i>pa.t.</i> <b>aptanë</b> “refused”</li></ul></li>
@@ -177,7 +178,7 @@
 <li><b>cé</b> <i>adv.</i> “maybe, possibly”</li>
 <li><b>celu-</b> <i>v.</i> “to flow (forth)”<ul><li><i>pa.t.</i> <b>celunë</b> “flowed (forth)”</li></ul></li>
 <li><b>cemen</b> <i>n.</i> “earth”</li>
-<li><b>cen-</b> <i>v.</i> “to see”<ul><li><i>pa.t.</i> <b>cennë</b> “saw”</li></ul></li>
+<li><b>cen-</b> <i>v.</i> “to see, look”<ul><li><i>pa.t.</i> <b>cennë</b> “saw, looked”</li></ul></li>
 <li><b>cendë</b> <i>n.</i> “point”</li>
 <li><b>cendelë</b> <i>n.</i> “face, *visage”</li>
 <li><b>Cermië</b> <i>n.</i> “July, *Earthy”</li>
@@ -324,7 +325,7 @@
 <li><b>hesto</b> <i>n.</i> “captain”</li>
 <li>#<b>hildë</b> (<b>hildi-</b>) <i>n.</i> “heir, follower”</li>
 <li><b>hilya-</b> <i>v.</i> “to follow”<ul><li><i>pa.t.</i> *<b>hilyanë</b> “followed”</li></ul></li>
-<li><b>hína</b> <i>n.</i> “child”</li>
+<li><b>hína</b> <i>n.</i> “child”<ul><li>irregular plural <b>híni</b> “children”</li></ul></li>
 <li><b>hir-</b> <i>v.</i> “to find”<ul><li><i>pa.t.</i> *<b>hirnë</b> “found”</li></ul></li>
 <li><b>Hísimë</b> [<b>þ</b>] <i>n.</i> “November, *Misty”</li>
 <li><b>hiswa</b> <i>adj.</i> “grey [of weather]”</li>
@@ -455,7 +456,8 @@
 <li><b>lindë</b> (<b>lindi-</b>) <i>n.</i> “singing, musical sound”</li>
 <li><b>lindo</b> <i>n.</i> “singer”</li>
 <li><b>lingwë</b> (<b>lingwi-</b>) <i>n.</i> “fish”</li>
-<li><b>linta</b> <i>adj.</i> “fast, swift”</li>
+<li><b>linquë</b> <i>adj.</i> “wet”</li>
+<li><b>linta</b> <i>adj.</i> “swift”</li>
 <li><b>lir-</b> <i>v.</i> “to sing”<ul><li><i>pa.t.</i> *<b>lirnë</b> “sang”</li></ul></li>
 <li><b>lírë</b> (<b>líri-</b>) <i>n.</i> “song”</li>
 <li><b>liru-</b> <i>v.</i> “to sing (gaily)”<ul><li><i>pa.t.</i> <b>lirunë</b> “sang (gaily)”</li></ul></li>
@@ -739,6 +741,7 @@
 
 <a id="p"></a>
 <ul class="vocab-list">
+<li><b>palan</b> <i>adj. and adv.</i> “far”</li>
 <li><b>palta-</b> <i>v.</i> “to feel, stroke”<ul><li><i>pa.t.</i> *<b>paltanë</b> “felt, stroked”</li></ul></li>
 <li><b>paluhta</b> <i>n.</i> “table”</li>
 <li><b>par-</b> <i>v.</i> “to learn”<ul><li><i>pa.t.</i> *<b>parnë</b> “learned”</li></ul></li>
@@ -1072,7 +1075,7 @@
 <li><b>vesta-</b> <i>v.</i> “to wed, marry”<ul><li><i>pa.t.</i> *<b>vestanë</b> “wedded, married”</li></ul></li>
 <li><b>vet</b> <i>pron.</i> “both of us”</li>
 <li><b>vil-</b> [<b>w-</b>] <i>v.</i> “to fly”<ul><li><i>pa.t.</i> <b>villë</b> “flew”</li></ul></li>
-<li><b>vilya</b> [<b>w-</b>] <i>v.</i> “air, (lower) sky”</li>
+<li><b>vilya</b> [<b>w-</b>] <i>n.</i> “air, (lower) sky”</li>
 <li><b>vingë</b> [<b>w-</b>] <i>n.</i> “foam”</li>
 <li><b>vinimo</b> [<b>w-</b>] <i>n.</i> “baby”</li>
 <li><b>vinya</b> <i>adj.</i> “new, young”</li>
