--- a/src/main/webapp/intro-quenya/index.html
+++ b/src/main/webapp/intro-quenya/index.html
@@ -19,8 +19,6 @@
 <center><h1><u>Eldamo Introductory Quenya</u></h1></center>
 <center>by Paul Strack</center>
 
-<p>This is a placeholder table of contents @@@</p>
-
 <ul>
 <li><b><a href="eldamo-intro-quenya-01.html">Chapter 1</a></b> - Course Introduction, Quenya Crash Course</li>
 <li><b><a href="eldamo-intro-quenya-02.html">Chapter 2</a></b> - Vowel Pronunciation, Basic Verb Classes, “To Be” Verbs</li>
@@ -39,22 +37,22 @@
 <li><b><a href="eldamo-intro-quenya-15.html">Chapter 15</a></b> - All Exercises</li>
 </ul>
 
-<center><h1><u>Memrise Vocabulary Courses</u></h1></center>
+<a id="memrise"></a><center><h1><u>Memrise Vocabulary Courses</u></h1></center>
 
-<p>Here are some links to vocabulary drills on the Memrise platform. To make typing answers easier, the memrise vocabulary omits all diaresis: <i>taure</i> not <i>taurë</i>.</p>
+<p>Here are some links to vocabulary drills on the Memrise platform. You may want to practice each set of drills before you go through the exercises in each chapter. To make typing answers easier, the Memrise vocabulary drills omits all diaresis (¨), so that they have <i>taure</i> rather than <i>taurë</i>. Long vowels are required, however like <i>síla</i> “is shining”.</p>
 
 <ul>
-<li><b><a href="https://app.memrise.com/course/6329970/eldamo-intro-quenya-ch-1/">Memrise Vocabulary for Chapter 1</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6334816/eldamo-intro-quenya-ch-2/">Memrise Vocabulary for Chapter 2</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6340132/eldamo-intro-quenya-ch-3/">Memrise Vocabulary for Chapter 3</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6343426/eldamo-intro-quenya-ch-4/">Memrise Vocabulary for Chapter 4</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6350684/eldamo-intro-quenya-ch-5/">Memrise Vocabulary for Chapter 5</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6352203/eldamo-intro-quenya-ch-6/">Memrise Vocabulary for Chapter 6</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6353711/eldamo-intro-quenya-ch-7/">Memrise Vocabulary for Chapter 7</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6357574/eldamo-intro-quenya-ch-8/">Memrise Vocabulary for Chapter 8</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6358068/eldamo-intro-quenya-ch-9/">Memrise Vocabulary for Chapter 9</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6361771/eldamo-intro-quenya-ch-10/">Memrise Vocabulary for Chapter 10</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6366933/eldamo-intro-quenya-ch-11/">Memrise Vocabulary for Chapter 11</a></b></li>
+<li><b>Chapter 1 Drills</b> - <a href="https://app.memrise.com/course/6329970/eldamo-intro-quenya-ch-1/">https://app.memrise.com/course/6329970/eldamo-intro-quenya-ch-1/</a></li>
+<li><b>Chapter 2 Drills</b> - <a href="https://app.memrise.com/course/6334816/eldamo-intro-quenya-ch-2/">https://app.memrise.com/course/6334816/eldamo-intro-quenya-ch-2/</a></li>
+<li><b>Chapter 3 Drills</b> - <a href="https://app.memrise.com/course/6340132/eldamo-intro-quenya-ch-3/">https://app.memrise.com/course/6340132/eldamo-intro-quenya-ch-3/</a></li>
+<li><b>Chapter 4 Drills</b> - <a href="https://app.memrise.com/course/6343426/eldamo-intro-quenya-ch-4/">https://app.memrise.com/course/6343426/eldamo-intro-quenya-ch-4/</a></li>
+<li><b>Chapter 5 Drills</b> - <a href="https://app.memrise.com/course/6350684/eldamo-intro-quenya-ch-5/">https://app.memrise.com/course/6350684/eldamo-intro-quenya-ch-5/</a></li>
+<li><b>Chapter 6 Drills</b> - <a href="https://app.memrise.com/course/6352203/eldamo-intro-quenya-ch-6/">https://app.memrise.com/course/6352203/eldamo-intro-quenya-ch-6/</a></li>
+<li><b>Chapter 7 Drills</b> - <a href="https://app.memrise.com/course/6353711/eldamo-intro-quenya-ch-7/">https://app.memrise.com/course/6353711/eldamo-intro-quenya-ch-7/</a></li>
+<li><b>Chapter 8 Drills</b> - <a href="https://app.memrise.com/course/6357574/eldamo-intro-quenya-ch-8/">https://app.memrise.com/course/6357574/eldamo-intro-quenya-ch-8/</a></li>
+<li><b>Chapter 9 Drills</b> - <a href="https://app.memrise.com/course/6358068/eldamo-intro-quenya-ch-9/">https://app.memrise.com/course/6358068/eldamo-intro-quenya-ch-9/</a></li>
+<li><b>Chapter 10 Drills</b> - <a href="https://app.memrise.com/course/6361771/eldamo-intro-quenya-ch-10/">https://app.memrise.com/course/6361771/eldamo-intro-quenya-ch-10/</a></li>
+<li><b>Chapter 11 Drills</b> - <a href="https://app.memrise.com/course/6366933/eldamo-intro-quenya-ch-11/">https://app.memrise.com/course/6366933/eldamo-intro-quenya-ch-11/</a></li>
 </ul>
 
 </body>
