--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,6 +10,14 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
+<p>v0.8.5</p>
+<ul>
+<li>Dictionary entries for semantic category 5 = Food and Drink.</li>
+</ul>
+<p>v0.8.4.3 (March 9, 2023)</p>
+<ul>
+<li>Finished Eldamo Introductory Quenya Chapters 7-15.</li>
+</ul>
 <p>v0.8.4.2</p>
 <ul>
 <li>Minor release as I worked on Eldamo Introductory Quenya Chapters 1-6.</li>
